# flappy-bird

./: Cargo.toml  LICENSE
.cargo/: config.toml
src/: main.rs
